--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body id="backgroundBody">
     <div id="textBody">
-        <h1 style="font-size:300%;">FURKAN EMÝR EROÐLU</h1>
-        <p style="font-size:300%;">TWÝTCH.TV/FOYYEK</p>
+        <h1 style="font-size:300%;">FURKAN EMiR EROGLU</h1>
+        <p style="font-size:300%;">TWiTCH.TV/FOYYEK</p>
         ><div>
             <a href="https://www.instagram.com/furkanemireroglu/" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://www.youtube.com/channel/UCYyW01bnybjTsCEz9TKGRnw?view_as=subscriber" class="fa fa-youtube" target="_blank" rel="noopener noreferrer"></a>
