--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    ><link href="main.css" rel="stylesheet">    
+    <link href="main.css" rel="stylesheet">    
     
     <title>FOYYEK TV</title>
 </head>
@@ -14,7 +14,7 @@
     <div id="textBody">
         <h1 style="font-size:300%;">FURKAN EMiR EROGLU</h1>
         <p style="font-size:300%;">TWiTCH.TV/FOYYEK</p>
-        ><div>
+        <div>
             <a href="https://www.instagram.com/furkanemireroglu/" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://www.youtube.com/channel/UCYyW01bnybjTsCEz9TKGRnw?view_as=subscriber" class="fa fa-youtube" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://twitter.com/furkanemir_erog?lang" class="fa fa-twitter" target="_blank" rel="noopener noreferrer"></a>
