Twitch eklendi yazı düzenlendi

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body id="backgroundBody">
     <div id="textBody">
         <h1 style="font-size:300%;">FURKAN EMiR EROGLU</h1>
-        <p style="font-size:300%;">TWiTCH.TV/FOYYEK</p>
+        <p style="font-size:300%;">FOYYEK</p>
         <div>
             <a href="https://www.instagram.com/furkanemireroglu/" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://www.youtube.com/channel/UCYyW01bnybjTsCEz9TKGRnw?view_as=subscriber" class="fa fa-youtube" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://twitter.com/furkanemir_erog?lang" class="fa fa-twitter" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://twitch.tv/foyyek" class="fa fa-twitch" target="_blank" rel="noopener noreferrer"></a>
         </div>
 
     </div>
